--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,29 +8,20 @@ jobs:
   PR:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up jq
-        run: sudo apt-get install jq
+      - env:
+          DATA: >
+            {
+              "embeds": [
+                {
+                  "title": "5-seny-park-community-fe-react",
+                  "description": "새로운 PR이 도착했습니다!\n\nhttps://www.acmicpc.net/problem/1756",
+                  "url": "https://github.com/Munbin-Lee/test/pull/1"
+                }
+              ]
+            }
+        run: >
+          curl -X
+          POST -H 'Content-type:application/json'
+          -d "$DATA"
+          ${{ secrets.DISCORD_WEBHOOK_URL }}
 
-      - name: Get PR Author
-        id: pr_author
-        run: echo "::set-output name=author::$(jq -r .pull_request.user.login <<< "$GITHUB_EVENT_PATH")"
-
-      - name: Get PR Reviewers
-        id: pr_reviewers
-        run: echo "::set-output name=reviewers::$(jq -r '[.pull_request.requested_reviewers[].login] | join(", ")' <<< "$GITHUB_EVENT_PATH")"
-
-      - name: Send Discord Notification
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          PR_AUTHOR: ${{ steps.pr_author.outputs.author }}
-          PR_REVIEWERS: ${{ steps.pr_reviewers.outputs.reviewers }}
-          PR_URL: ${{ github.event.pull_request.html_url }}
-        run: |
-          curl -X POST -H "Content-Type: application/json" -d "$(jq -n --arg author "$PR_AUTHOR" --arg reviewers "$PR_REVIEWERS" --arg url "$PR_URL" '{
-            "embeds": [
-              {
-                "title": "새로운 PR이 도착했습니다!",
-                "description": "PR 생성자: \($author)\n검토 요청자: \($reviewers)\n\n\($url)"
-              }
-            ]
-          }')" $DISCORD_WEBHOOK_URL
